--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div>
           <label for="timeSlot" class="block text-sm font-medium text-gray-700"
-            >Ranura de tiempo o bits por fuente (bits):</label
+            >Ranura de tiempo o bits por fuente:</label
           >
           <input
             type="number"
